--- a/static/castle.html
+++ b/static/castle.html
@@ -971,5 +971,7 @@
         // ========== 启动 ==========
         init();
     </script>
+
+    <script src="/js/danmaku.js"></script>
 </body>
 </html>
