keep castle and river only

--- a/static/river.html
+++ b/static/river.html
@@ -675,7 +675,7 @@
     
     <!-- 场景导航 -->
     <div class="scene-nav">
-        <a href="pk.html" class="scene-link">🏃 赛跑</a>
+        <!--<a href="pk.html" class="scene-link">🏃 赛跑</a>-->
         <a href="castle.html" class="scene-link">⚔️ 城堡</a>
         <a href="river.html" class="scene-link active">🌊 漂流</a>
     </div>
