--- a/static/castle.html
+++ b/static/castle.html
@@ -556,7 +556,7 @@
     
     <!-- 场景导航 -->
     <div class="scene-nav">
-        <a href="pk.html" class="scene-link">🏃 赛跑</a>
+        <!--<a href="pk.html" class="scene-link">🏃 赛跑</a>-->
         <a href="castle.html" class="scene-link active">⚔️ 城堡</a>
         <a href="river.html" class="scene-link">🌊 漂流</a>
     </div>
