add the missing danmaku

--- a/static/river.html
+++ b/static/river.html
@@ -1204,5 +1204,7 @@
         // ========== 启动 ==========
         init();
     </script>
+
+    <script src="/js/danmaku.js"></script>
 </body>
 </html>
