change wave style

--- a/static/river.html
+++ b/static/river.html
@@ -176,7 +176,8 @@
                 lane.id = `lane-${player.id}`;
                 lane.innerHTML = `
                     <div class="river-bg"></div>
-                    <div class="water-lines"></div>
+                    <!--<div class="water-lines"></div>-->
+                    <div class="wave"></div>
                     <div class="riverbank-top"></div>
                     <div class="riverbank-bottom"></div>
                     
