--- a/static/castle.html
+++ b/static/castle.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="user-bar">
-        <span id="user-info"></span>
+        <a href="/account" class="user-link" id="user-info">
+            <span class="user-name"></span>
+            <span class="settings-icon">⚙️</span>
+        </a>
         <button class="logout-btn" onclick="logout()">🚪 登出</button>
     </div>
     
@@ -125,7 +128,7 @@
                 const authData = await authRes.json();
                 if (authData.logged_in) {
                     currentUser = authData.display_name || authData.username;
-                    document.getElementById('user-info').textContent = `👤 ${currentUser}`;
+                    document.querySelector('#user-info .user-name').textContent = `👤 ${currentUser}`;
                 }
             } catch (e) {
                 console.log('未登录或无法获取用户信息');
